--- a/quiz drapeau/QuizLgbt.html
+++ b/quiz drapeau/QuizLgbt.html
@@ -9,10 +9,9 @@
     <body>
         <!--menu-->
         <nav>
-            <a href="C:\Users\eloro\Desktop\code\quiz drapeau\Index.html">Page d'accueil</a>
-            <a href="C:\Users\eloro\Desktop\code\quiz drapeau\QuizBasique.html">Quiz Basique</a>
-            <a href="C:\Users\eloro\Desktop\code\quiz drapeau\QuizLgbt.html">Quiz LGBT</a>
-            <a href="C:\Users\eloro\Desktop\code\quiz drapeau\Score.html">Vos scores</a>
+            <a href="Index.html">Page d'accueil</a>
+            <a href="QuizBasique.html">Quiz Basique</a>
+            <a href="QuizLgbt.html">Quiz LGBT</a>
         </nav>
 
         <!--Contenue de la page Quiz Basique-->
