Rectification script js

--- a/QuizBasique.html
+++ b/QuizBasique.html
@@ -27,6 +27,6 @@
             </div>
         <button id="next-btn" class="btn-container">Suivant</button>
         </div>
-        <script src="C:\Users\eloro\Desktop\code\quiz drapeau\QuizBasique.js"></script>
+        <script src="QuizBasique.js"></script>
     </body>
 </html>
