--- a/QuizLgbt.html
+++ b/QuizLgbt.html
@@ -27,6 +27,6 @@
             </div>
         <button id="next-btn" class="btn-container">Suivant</button>
         </div>
-        <script src="C:\Users\eloro\Desktop\code\quiz drapeau\QuizLgbt.js"></script>
+        <script src="QuizLgbt.js"></script>
     </body>
 </html>
