Rectification index.html

--- a/Index.html
+++ b/Index.html
@@ -36,6 +36,6 @@
             </div>
         <button id="next-btn" class="btn-container">Suivant</button>
         </div>
-        <script src="C:\Users\eloro\Desktop\code\quiz drapeau\index.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
