--- a/QuizLgbt.html
+++ b/QuizLgbt.html
@@ -9,9 +9,11 @@
     <body>
         <!--menu-->
         <nav>
-            <a href="Index.html">Page d'accueil</a>
-            <a href="QuizBasique.html">Quiz Basique</a>
-            <a href="QuizLgbt.html">Quiz LGBT</a>
+            <ul class="menu">
+                <li><a href="Index.html">Page d'accueil</a></li>
+                <li><a href="QuizBasique.html">Quiz Basique</a></li>
+                <li><a href="QuizLgbt.html">Quiz LGBT</a></li>
+            </ul>
         </nav>
 
         <!--Contenue de la page Quiz Basique-->
