J'ai changé le lien vers le CSS

--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,16 @@
         <title>Quiz drapeau</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="Index.css">
     </head>
     <body>
         <!--menu-->
         <nav>
-            <a href="Index.html">Page d'accueil</a>
-            <a href="QuizBasique.html">Quiz Basique</a>
-            <a href="QuizLgbt.html">Quiz LGBT</a>
+            <ul class="menu">
+                <li><a href="Index.html">Page d'accueil</a></li>
+                <li><a href="QuizBasique.html">Quiz Basique</a></li>
+                <li><a href="QuizLgbt.html">Quiz LGBT</a></li>
+            </ul>
         </nav>
 
         <!--Contenue de la page d'accueil-->
