--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
         <title>Quiz drapeau</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="Index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <!--menu-->
