--- a/Index.html
+++ b/Index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
-<html lang = fr>
-    <head>
-        <title>Quiz drapeau</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <!--menu-->
-        <nav>
-            <ul class="menu">
-                <li><a href="Index.html">Page d'accueil</a></li>
-                <li><a href="QuizBasique.html">Quiz Basique</a></li>
-                <li><a href="QuizLgbt.html">Quiz LGBT</a></li>
-            </ul>
-        </nav>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz drapeau</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Menu -->
+    <nav>
+        <ul class="menu">
+            <li><a href="Index.html">Page d'accueil</a></li>
+            <li><a href="QuizBasique.html">Quiz Basique</a></li>
+            <li><a href="QuizLgbt.html">Quiz LGBT</a></li>
+        </ul>
+    </nav>
 
-        <!--Contenue de la page d'accueil-->
-        <h1>Quiz drapeau</h1>
-        <br>
-        <br>
-        <h3>Voici le fonctionnement de ce jeu !</h3>
-        <br>
-
-        <!--Réglement du jeu-->
-        <p>Vous avez deux modes de jeu disponible !</p>
-        <p>Le mode basique, avec des drapeau du monde entier.</p>
-        <p>Et le mode LGBT, avec des drapeau sur les orientations sexuelle et idendité de genre.</p>
-        <p>Le réel concept de ce jeu c'est que vous n'avez pas de photo des drapeau,</p>
-        <p>mais seulement une description.</p>
-        <p>Pour répondre vous aurez trois choix de réponse disponible.</p>
-        <div id="quiz-container">
-            <p>Par exemple :</p>
-            <div id="question-container">
-                <p id="question"></p>
-                <div id="answer-buttons" class="btn-container"></div>
-            </div>
-        <button id="next-btn" class="btn-container">Suivant</button>
-        </div>
-        <script src="index.js"></script>
-    </body>
+    <!-- Contenu de la page d'accueil -->
+    <h1>Quiz drapeau</h1>
+    <h3>Voici le fonctionnement de ce jeu !</h3>
+    <p>Vous avez deux modes de jeu disponibles !</p>
+    <p>Le mode basique, avec des drapeaux du monde entier.</p>
+    <p>Et le mode LGBT, avec des drapeaux sur les orientations sexuelles et identités de genre.</p>
+    <p>Le réel concept de ce jeu est que vous n'avez pas de photo des drapeaux,</p>
+    <p>mais seulement une description.</p>
+    <p>Pour répondre, vous aurez trois choix de réponse disponibles.</p>
+</body>
 </html>
