--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,9 @@
 <body>
     <!-- Menu -->
     <nav>
-        <ul class="menu">
-            <li><a href="Index.html">Page d'accueil</a></li>
-            <li><a href="QuizBasique.html">Quiz Basique</a></li>
-            <li><a href="QuizLgbt.html">Quiz LGBT</a></li>
-        </ul>
+            <a href="Index.html">Page d'accueil</a>
+            <a href="QuizBasique.html">Quiz Basique</a>
+            <a href="QuizLgbt.html">Quiz LGBT</a>
     </nav>
 
     <!-- Contenu de la page d'accueil -->
