--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz drapeau</title>
-    <link rel="stylesheet" href="styles.css">
+    <!--<link rel="stylesheet" href="styles.css">-->
+    <style>
+        /* CSS inline pour simplification */
+        body {
+            font-family: 'Courier New', Courier, monospace;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        nav {
+            background-color: #007bff;
+            padding: 10px;
+            width: 100%;
+            text-align: center;
+            color: white;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px;
+            display: inline-block;
+        }
+
+        nav a:hover {
+            background-color: #0056b3;
+        }
+
+        h1, h3, p {
+            text-align: center;
+            margin: 10px;
+        }
+
+        @media (max-width: 600px) {
+            nav {
+                font-size: 14px;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Menu -->
