--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,13 @@
     <title>Quiz drapeau</title>
     <!--<link rel="stylesheet" href="styles.css">-->
     <style>
-        /* CSS inline pour simplification */
+        /* Styles de base */
         body {
             font-family: 'Courier New', Courier, monospace;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            width: 100%;
         }
 
         nav {
@@ -20,6 +21,10 @@
             width: 100%;
             text-align: center;
             color: white;
+            position: fixed; /* Fixer le menu en haut pour tester */
+            top: 0;
+            left: 0;
+            z-index: 1000; /* Assurer que le menu est au-dessus des autres éléments */
         }
 
         nav a {
@@ -33,9 +38,9 @@
             background-color: #0056b3;
         }
 
-        h1, h3, p {
-            text-align: center;
-            margin: 10px;
+        /* Styles pour tester la visibilité */
+        .content {
+            margin-top: 60px; /* Pour éviter le chevauchement du contenu avec le menu */
         }
 
         @media (max-width: 600px) {
