--- a/Index.html
+++ b/Index.html
@@ -7,47 +7,11 @@
     <!--<link rel="stylesheet" href="styles.css">-->
     <style>
         /* Styles de base */
-        body {
-            font-family: 'Courier New', Courier, monospace;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            width: 100%;
-        }
-
         nav {
-            background-color: #007bff;
-            padding: 10px;
-            width: 100%;
-            text-align: center;
-            color: white;
-            position: fixed; /* Fixer le menu en haut pour tester */
-            top: 0;
-            left: 0;
-            z-index: 1000; /* Assurer que le menu est au-dessus des autres éléments */
+            border: 2px solid red; /* Bordure rouge pour tester */
+            background-color: yellow; /* Couleur de fond pour vérifier la visibilité */
         }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-            display: inline-block;
-        }
-
-        nav a:hover {
-            background-color: #0056b3;
-        }
-
-        /* Styles pour tester la visibilité */
-        .content {
-            margin-top: 60px; /* Pour éviter le chevauchement du contenu avec le menu */
-        }
-
-        @media (max-width: 600px) {
-            nav {
-                font-size: 14px;
-            }
-        }
+        
     </style>
 </head>
 <body>
