--- a/Index.html
+++ b/Index.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz drapeau</title>
-    <!--<link rel="stylesheet" href="styles.css">-->
-    <style>
-        /* Styles de base */
-        nav {
-            border: 2px solid red; /* Bordure rouge pour tester */
-            background-color: yellow; /* Couleur de fond pour vérifier la visibilité */
-        }
-        
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Menu -->
