--- a/Index.html
+++ b/Index.html
@@ -23,5 +23,14 @@
     <p>Le réel concept de ce jeu est que vous n'avez pas de photo des drapeaux,</p>
     <p>mais seulement une description.</p>
     <p>Pour répondre, vous aurez trois choix de réponse disponibles.</p>
+    <div id="quiz-container">
+        <p>Par exemple :</p>
+        <div id="question-container">
+            <p id="question"></p>
+            <div id="answer-buttons" class="btn-container"></div>
+        </div>
+        <button id="next-btn" class="btn-container">Suivant</button>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
