mise à jour pour les niveaux

--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,11 @@
 <body>
     <!-- Menu -->
     <nav>
-            <a href="Index.html">Page d'accueil</a>
-            <a href="QuizBasique.html">Quiz Basique</a>
-            <a href="QuizLgbt.html">Quiz LGBT</a>
+        <ul class="menu">
+            <li><a href="Index.html">Page d'accueil</a></li>
+            <li><a href="QuizBasique.html">Quiz Basique</a></li>
+            <li><a href="QuizLgbt.html">Quiz LGBT</a></li>
+        </ul>
     </nav>
 
     <!-- Contenu de la page d'accueil -->
@@ -23,6 +25,7 @@
     <p>Le réel concept de ce jeu est que vous n'avez pas de photo des drapeaux,</p>
     <p>mais seulement une description.</p>
     <p>Pour répondre, vous aurez trois choix de réponse disponibles.</p>
+    <p>Vous pourrez choisir entre trois niveaux de dificultés !</p>
     <div id="quiz-container">
         <p>Par exemple :</p>
         <div id="question-container">
